--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,32 @@
             <artifactId>javafx-fxml</artifactId>
             <version>13</version>
         </dependency>
+        <dependency>  
+          <groupId>com.fasterxml.jackson.core</groupId>  
+          <artifactId>jackson-databind</artifactId>  
+          <version>2.15.2</version>  
+        </dependency>  
+
+        <!-- JUnit for testing -->  
+        <dependency>  
+          <groupId>org.junit.jupiter</groupId>  
+          <artifactId>junit-jupiter-api</artifactId>  
+          <version>5.10.0</version>  
+          <scope>test</scope>  
+        </dependency>  
+        <dependency>  
+          <groupId>org.junit.jupiter</groupId>  
+          <artifactId>junit-jupiter-engine</artifactId>  
+          <version>5.10.0</version>  
+          <scope>test</scope>  
+        </dependency>
+      <!-- Jackson Java Time (JSR-310) support -->
+        <dependency>
+          <groupId>com.fasterxml.jackson.datatype</groupId>
+          <artifactId>jackson-datatype-jsr310</artifactId>
+          <version>2.15.2</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
@@ -29,6 +55,17 @@
                 <version>3.8.0</version>
                 <configuration>
                     <release>11</release>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M7</version>
+                <configuration>
+                    <includes>
+                        <include>**/*Test.java</include>
+                    </includes>
+                    <useModulePath>false</useModulePath>
                 </configuration>
             </plugin>
             <plugin>
